Include <a> tag to upon whatsapp phone number hyperlink

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -97,6 +97,7 @@
               </td>
               <td class="client-td action-column">
                 <div class="flex items-center justify-center gap-2 flex-wrap">
+                    <a href="https://wa.me/+447446107779">
                     <button
                       *ngIf="!editing"
                       pButton
@@ -104,7 +105,7 @@
                       severity="secondary"
                       icon="pi pi-whatsapp"
                       rounded
-                    ></button>
+                    ></button></a>
                     <button
                       *ngIf="!editing"
                       pButton
