Create new trainerProfilePage component, configure appropriate routing, along with display changes to the navbar and it's addition

--- a/ClientDashboard_GUI/src/app/navbar/navbar.html
+++ b/ClientDashboard_GUI/src/app/navbar/navbar.html
@@ -1,6 +1,11 @@
 @if(accountService.currentUser()){
-    <div class="card">
-        <p-menubar [model]="items" />
-    </div>
+
+    <p-menubar [model]="functionItems">
+    <ng-template #end>
+        <div class="flex align-items-center gap-2">
+            <p-menubar [model]="generalItems" [style]="{'border': 'none', 'background': 'transparent'}"></p-menubar>
+        </div>
+    </ng-template>
+</p-menubar>
 }
 
