Input field changes within trainer profile, along with ,addition of trainer retrieval HttpGet request within, respective controller

--- a/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
+++ b/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
@@ -9,61 +9,61 @@
         </div>
         
         <div class="card-content">
-                    <div class="grid">
-                        <div class="col-12 md:col-6">
-                            <label for="username">First Name</label>
-                            <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="firstName" />
-                        </div>
+                <div class="grid">
+                  <div class="flex flex-col gap-2">
+                    <label for="firstName">First Name</label>
+                    <input pInputText id="firstName" aria-describedby="first-name-help" [(ngModel)]="firstName" />
+                </div>
 
-                        <div class="col-12 md:col-6">
-                            <label for="username">Surname</label>
-                            <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="surname" />
-                        </div>
+                <div class="col-12 md:col-6">
+                    <label for="surname">Surname</label>
+                    <input pInputText id="surname" aria-describedby="username-help" [(ngModel)]="surname" />
+                </div>
 
-                        <div class="col-12 md:col-6">
-                            <label for="username">Email</label>
-                            <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="email" />
-                        </div>
+                <div class="col-12 md:col-6">
+                    <label for="email">Email</label>
+                    <input pInputText id="email" aria-describedby="email-help" [(ngModel)]="email" />
+                </div>
 
-                        <div class="col-12 md:col-6">
-                            <label for="username">Phone Number</label>
-                            <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="firstName" />
-                        </div>
+                <div class="col-12 md:col-6">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input pInputText id="phoneNumber" aria-describedby="phoneNumber-help" [(ngModel)]="phoneNumber" />
+                </div>
 
-                        <div class="col-12 md:col-6">
-                            <label for="username">Business Name</label>
-                            <input pInputText id="username" aria-describedby="username-help" [(ngModel)]="firstName" />
-                        </div>
-                        
-                        <div class="col-12 md:col-6">
-                            <label for="defaultCurrency" class="block text-900 font-medium mb-2">Default Currency</label>
-                            <p-dropdown 
-                                id="defaultCurrency"
-                                [(ngModel)]="defaultCurrency"
-                                name="defaultCurrency"
-                                [options]="currencies"
-                                optionLabel="name"
-                                optionValue="code"
-                                placeholder="Select currency"
-                                class="w-full"
-                                [showClear]="true">
-                            </p-dropdown>
-                        </div>
-                        
-                        <div class="col-12 md:col-6">
-                            <label for="averageSessionPrice" class="block text-900 font-medium mb-2">Average Session Price</label>
-                            <p-inputNumber 
-                                id="averageSessionPrice"
-                                [(ngModel)]="averageSessionPrice"
-                                name="averageSessionPrice"
-                                mode="currency"
-                                [currency]="defaultCurrency || 'GBP'"
-                                placeholder="Enter session price"
-                                class="w-full">
-                            </p-inputNumber>
-                        </div>
-                    </div>
-              
+                <div class="col-12 md:col-6">
+                    <label for="businessName">Business Name</label>
+                    <input pInputText id="businessName" aria-describedby="businessName-help" [(ngModel)]="businessName" />
+                </div>
+                
+                <div class="col-12 md:col-6">
+                    <label for="defaultCurrency" class="block text-900 font-medium mb-2">Default Currency</label>
+                    <p-dropdown 
+                        id="defaultCurrency"
+                        [(ngModel)]="defaultCurrency"
+                        name="defaultCurrency"
+                        [options]="currencies"
+                        optionLabel="name"
+                        optionValue="code"
+                        placeholder="Select currency"
+                        class="w-full"
+                        [showClear]="true">
+                    </p-dropdown>
+                </div>
+                
+                <div class="col-12 md:col-6">
+                    <label for="averageSessionPrice" class="block text-900 font-medium mb-2">Average Session Price</label>
+                    <p-inputNumber 
+                        id="averageSessionPrice"
+                        [(ngModel)]="averageSessionPrice"
+                        name="averageSessionPrice"
+                        mode="currency"
+                        [currency]="defaultCurrency || 'GBP'"
+                        placeholder="Enter session price"
+                        class="w-full">
+                    </p-inputNumber>
+                </div>
+            </div>
+      
         </div>
     </div>
     
