--- a/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
+++ b/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
@@ -61,6 +61,22 @@
                     </p-inputNumber>
                 </div>
             </div>
+
+            <div class="button-group">
+                <p-button 
+                    label="Reset" 
+                    severity="secondary" 
+                    icon="pi pi-refresh"
+                    styleClass="reset-btn">
+                </p-button>
+                
+                <p-button 
+                    label="Save" 
+                    severity="success" 
+                    icon="pi pi-check"
+                    styleClass="save-btn">
+                </p-button>
+            </div>
         </div>
     </div>
     
