Typo fix along with submit type setup for save button, allowing calling save method from frontend

--- a/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
+++ b/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
@@ -81,7 +81,8 @@
                     label="Save" 
                     severity="success" 
                     icon="pi pi-check"
-                    styleClass="save-btn">
+                    styleClass="save-btn"
+                    type="submit">
                 </p-button>
             </div>
         </div>
