--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -18,6 +18,32 @@
         editMode="row"
     >
         <ng-template #header>
+            <p-button
+            pButton
+            pRipple
+            type="button"
+            icon="pi pi-cog"
+            (click)="showDialogForAutoWorkoutRetrieval()"
+            text
+            size="large"
+            rounded
+            severity="secondary"></p-button>
+            <p-dialog header="Edit Profile" [modal]="true" [(visible)]="autoWorkoutRetrievalVisible" [style]="{ width: '25rem' }">
+                <span class="p-text-secondary block mb-8">Update your information.</span>
+                <div class="flex items-center gap-4 mb-4">
+                    <label for="username" class="font-semibold w-24">Username</label>
+                    <input pInputText id="username" class="flex-auto" autocomplete="off" />
+                </div>
+                <div class="flex items-center gap-4 mb-8">
+                    <label for="email" class="font-semibold w-24">Email</label>
+                    <input pInputText id="email" class="flex-auto" autocomplete="off" />
+                </div>
+                <div class="flex justify-end gap-2">
+                    <p-button label="Cancel" severity="secondary" (click)="autoWorkoutRetrievalVisible = false" />
+                    <p-button label="Save" (click)="autoWorkoutRetrievalVisible = false" />
+                </div>
+            </p-dialog>
+            
             <div class="card flex justify-center">
                 <p-button icon="pi pi-plus" (click)="showDialogForAdd()" severity="secondary" label="New" />
                 <p-dialog header="Add new Workout" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem', height: 'auto'}" >
