Set up manual workout retrieval button upon configuring valid Api Key

--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
@@ -15,3 +15,10 @@
 .workout-td {
     text-align: center;
 }
+
+.header-buttons {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
