--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -23,30 +23,33 @@
                     pButton
                     pRipple
                     type="button"
-                    icon="pi pi-cog"
+                    icon="pi pi-globe"
                     (click)="showDialogForAutoWorkoutRetrieval()"
                     text
                     rounded
                     severity="secondary">
                 </p-button>
-                <p-button 
-                    label="Gather Workouts" 
-                    severity="secondary"
+                <p-togglebutton 
+                    [(ngModel)]="validApiKeyProvided"
+                    onLabel="Gather Workouts"
+                    offLabel="Gather Workouts"
+                    styleClass="w-full sm:w-40"
+                    ariaLabel="Gather Workouts"
                     size="small">
-                </p-button>
+                </p-togglebutton>
             </div>
-            <p-dialog header="Set up External Workout Retrieval" [modal]="true" [(visible)]="autoWorkoutRetrievalVisible" [style]="{ width: '25rem' }">
-                <div class="flex items-center gap-4 mb-4">
-                    <label for="username" class="font-semibold w-24">Workout API Provider</label>
-                    <input pInputText id="username" class="flex-auto" autocomplete="off" />
-                </div>
+            <p-dialog header="Set up Hevy App Workout Retrieval" [modal]="true" [(visible)]="autoWorkoutRetrievalVisible" [style]="{ width: '25rem' }">
                 <div class="flex items-center gap-4 mb-4">
                     <label for="username" class="font-semibold w-24">ApiKey</label>
                     <input pInputText id="username" class="flex-auto" autocomplete="off" />
                 </div>
                 <div class="flex items-center gap-4 mb-8">
                     <label for="email" class="font-semibold w-24">Toggle Automatic Collection</label>
-                    <input pInputText id="email" class="flex-auto" autocomplete="off" />
+                    <p-togglebutton 
+                        [(ngModel)]="automaticRetrievalChecked" 
+                        styleClass="w-full sm:w-40" 
+                        aria-label="Confirmation">
+                    </p-togglebutton>
                 </div>
                 <div class="flex justify-end gap-2">
                     <p-button label="Cancel" severity="secondary" (click)="autoWorkoutRetrievalVisible = false" />
