Finalize gatherExternalWorkouts method to call api, proceeding to call the external workout retrieval process

--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -29,8 +29,9 @@
                     rounded
                     severity="secondary">
                 </p-button>
-                <p-togglebutton 
-                    [(ngModel)]="validApiKeyProvided"
+                <p-togglebutton
+                    [disabled]="!validApiKeyProvided"
+                    (click)="gatherExternalWorkouts()"
                     onLabel="Gather Workouts"
                     offLabel="Gather Workouts"
                     styleClass="w-full sm:w-40"
