Include getAutoRetrievalStatus http get method within trainer controller, to allow trainer user to view current status within dialog

--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -42,7 +42,7 @@
             <p-dialog header="Set up Hevy App Workout Retrieval" [modal]="true" [(visible)]="autoWorkoutRetrievalVisible" [style]="{ width: '25rem' }">
                 <div class="flex items-center gap-4 mb-4">
                     <label for="username" class="font-semibold w-24">ApiKey</label>
-                    <p-password [(ngModel)]="trainerApiKey" [toggleMask]="true" />
+                    <p-password [(ngModel)]="trainerApiKey" [toggleMask]="true" [feedback]="false" />
                 </div>
                 <div class="flex items-center gap-4 mb-8">
                     <label for="email" class="font-semibold w-24">Toggle Automatic Collection</label>
