--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="flex justify-end gap-2">
                     <p-button label="Cancel" severity="secondary" (click)="autoWorkoutRetrievalVisible = false" />
-                    <p-button label="Save" (click)="autoWorkoutRetrievalVisible = false" />
+                    <p-button label="Save" (click)="updateWorkoutRetrievalDetails(trainerApiKey, automaticRetrievalChecked)" />
                 </div>
             </p-dialog>
 
