Spinner inclusion within swap to trainer profile page

--- a/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
+++ b/ClientDashboard_GUI/src/app/trainer-profile-page/trainer-profile-page.component.html
@@ -1,4 +1,8 @@
-<div class="profile-container">
+@if (this.isLoading) {
+    <app-spinner></app-spinner>
+}
+@else {
+    <div class="profile-container">
     <p-toast />
     
     <div class="card">
@@ -91,3 +95,6 @@
   </div>
     
 </div>
+}
+
+
